[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlquery_inspector"
version = "1.0.7"
description = "A Django middleware package to capture, inspect and print out queries to the terminal"
readme = "README.rst"
license = { text = "MIT" }
authors = [{ name = "DarkOps", email= "darkops@gmail.com" },
]
dependencies = [
    "Pygments>=2.18.0", 
    "sqlparse>=0.5.0",
]

requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/mansoormirza"

[tool.setuptools]
packages.find = { where = ["."], include = ["sql-inspector*"] }
